--- a/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/details/details.component.html
@@ -1,10 +1,10 @@
 <app-header-title fxFlexFill> </app-header-title>
 <main>
-  <div class="banner-header" [class]="getFieldBannerPhoto(cropType)"></div>
+  <div class="banner-header" [ngStyle]="{'background-image': 'url(' + cropStatic?.bgPic + ')'}"></div>
 
   <div class="details-container">
     <div class="details-header">
-      <div><img [src]="getThumbnailPhoto(cropType)" /></div>
+      <div><img [src]="cropStatic?.thumb" /></div>
 
       <div class="fieldname-container">
         <div>
@@ -12,7 +12,7 @@
         </div>
 
         <div>
-          <span class="crop-pill" [class]="getCropType(cropType)">{{
+          <span class="crop-pill" [class]="getCropType(fieldDetails.crop.cropName)">{{
             fieldDetails.crop.type
           }}</span>
         </div>
@@ -100,16 +100,17 @@
     </mat-card-content>
   </mat-card>
 </div> -->
-
 <ng-template #warningDialog>
-  <div class="dialog-wrapper">
-    <h2>Delete Field?</h2>
-    <p>This will permanently delete this field from your list</p>
-  </div>
-  <div class="dialog-buttons">
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button color="warn" (click)="deleteField()" mat-dialog-close>
-      DELETE
-    </button>
-  </div>
+    <h2 mat-dialog-title>Delete Field?</h2>
+    <mat-dialog-content class="mat-typography">
+      <p>
+        This will permanently delete this field from your list.
+        <br />
+        <br />
+      </p>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+      <button mat-button mat-dialog-close>Cancel</button>
+      <button mat-button color="warn" (click)="deleteField()" mat-dialog-close>DELETE</button>
+    </mat-dialog-actions>
 </ng-template>
