Added other soil type calibration calculations

--- a/liquid-prep-app/src/app/components/dashboard/fields/add-field/add-field.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/add-field/add-field.component.html
@@ -32,17 +32,17 @@
       <mat-select matInput formControlName="soilType" matNativeControl>
         <mat-option value="" selected></mat-option>
         <mat-option value="Heavy clay soil">Heavy clay soil</mat-option>
-        <mat-option value="Sandy soil (coarse texture)" disabled
-          >Sandy soil (coarse texture)</mat-option
+        <mat-option value="Sandy soil"
+          >Sandy soil</mat-option
         >
-        <mat-option value="Sandy loam soil (moderately coarse texture)" disabled
-          >Sandy loam soil (moderately coarse texture)</mat-option
+        <mat-option value="Sandy loam soil" disabled
+          >Sandy loam soil</mat-option
         >
-        <mat-option value="Sandy clay loam soil (moderately fine texture)" disabled
-          >Sandy clay loam soil (moderately fine texture)</mat-option
+        <mat-option value="Houston black clay soil" disabled
+          >Houston black clay soil</mat-option
         >
-        <mat-option value="Clay soil (fine texture)" disabled
-          >Clay soil (fine texture)</mat-option
+        <mat-option value="Austin clay soil" disabled
+          >Austin clay soil</mat-option
         >
       </mat-select>
     </mat-form-field>
