Enable other soil type

--- a/liquid-prep-app/src/app/components/dashboard/fields/add-field/add-field.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/fields/add-field/add-field.component.html
@@ -35,13 +35,13 @@
         <mat-option value="Sandy soil"
           >Sandy soil</mat-option
         >
-        <mat-option value="Sandy loam soil" disabled
+        <mat-option value="Sandy loam soil"
           >Sandy loam soil</mat-option
         >
-        <mat-option value="Houston black clay soil" disabled
+        <mat-option value="Houston black clay soil"
           >Houston black clay soil</mat-option
         >
-        <mat-option value="Austin clay soil" disabled
+        <mat-option value="Austin clay soil"
           >Austin clay soil</mat-option
         >
       </mat-select>
