Update Watering Advice Page with latest designs

--- a/liquid-prep-app/src/app/components/dashboard/home/home.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/home/home.component.scss
@@ -1,5 +1,5 @@
-.location-weather{
-  background-color: #EDF5FF;
+.location-weather {
+  background-color: #edf5ff;
   display: flex;
   flex-direction: row;
   padding-top: 12px;
@@ -8,7 +8,7 @@
   height: 100%;
 }
 
-.location{
+.location {
   flex: 0.42;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
   padding-left: 4%;
 }
 
-.farm{
+.farm {
   flex: 1;
 }
 
@@ -29,22 +29,22 @@
   //text-overflow: ellipsis;
 }
 
-.city{
+.city {
   flex: 1;
 }
 
-.city-info{
+.city-info {
   display: flex;
   flex-direction: row;
   align-items: center;
   height: 100%;
 }
 
-.space{
-  flex:0.16;
+.space {
+  flex: 0.16;
 }
 
-.weather{
+.weather {
   display: flex;
   flex: 0.42;
   background-color: white;
@@ -53,14 +53,14 @@
   padding-bottom: 10px;
 }
 
-.weather-icon{
+.weather-icon {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.custom-card{
+.custom-card {
   flex: 1;
   padding: 0;
   margin: 0;
@@ -102,3 +102,27 @@
   align-items: center;
 }
 
+.item-button {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  text-align: left;
+}
+
+.item-button:focus {
+  outline: none;
+}
+
+.item-image {
+  margin-right: 8px;
+}
+
+.item-content {
+  margin-left: 4px;
+}
