--- a/liquid-prep-app/src/app/components/dashboard/home/home.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/home/home.component.html
@@ -1,55 +1,87 @@
 <div class="location-weather">
   <div class="location">
     <mat-card class="custom-card">
-      <mat-card-title class="farm mat-subheading">Frog Hill Form</mat-card-title>
+      <mat-card-title class="farm mat-subheading"
+        >Frog Hill Form</mat-card-title
+      >
       <mat-card-content class="city-info">
         <mat-icon class="material-icons-outlined">location_on</mat-icon>
-        <span>{{location}}</span>
+        <span>{{ location }}</span>
       </mat-card-content>
     </mat-card>
   </div>
-  <div class="space">
-  </div>
+  <div class="space"></div>
   <div class="weather">
-    <div class="weather-icon" >
-      <img [src]="weatherIconImage" width="36" height="36">
+    <div class="weather-icon">
+      <img [src]="weatherIconImage" width="36" height="36" />
     </div>
     <mat-card class="custom-card">
-      <mat-card-title>{{temperature}}&deg;C</mat-card-title>
+      <mat-card-title>{{ temperature }}&deg;C</mat-card-title>
       <mat-card-content>
-        <span style="margin-right: 4px">{{loading ? '' : precipChance}}%</span>
-        <span>{{loading ? '' : precipType}}</span>
+        <span style="margin-right: 4px"
+          >{{ loading ? "" : precipChance }}%</span
+        >
+        <span>{{ loading ? "" : precipType }}</span>
       </mat-card-content>
     </mat-card>
   </div>
 </div>
 
-<mat-tab-group #tabGroup mat-stretch-tabs (selectedTabChange)="onTabChange($event)">
-  <mat-tab  #tab1>
+<mat-tab-group
+  #tabGroup
+  mat-stretch-tabs
+  (selectedTabChange)="onTabChange($event)"
+>
+  <mat-tab #tab1>
     <ng-template mat-tab-label>
       <div class="vertical-align-center">
-        <mat-icon class="mat-primary material-symbols-outlined">sprinkler</mat-icon>
+        <mat-icon class="mat-primary material-symbols-outlined"
+          >sprinkler</mat-icon
+        >
         <span>Needs Watering</span>
       </div>
     </ng-template>
     <mat-list>
       <ng-container *ngFor="let field of needsWateringFields">
-        <mat-list-item fxLayout="row"  fxFlexFill  fxLayoutAlign="space-between center" style="margin-top: 4px">
+        <mat-list-item
+          fxLayout="row"
+          fxFlexFill
+          fxLayoutAlign="space-between center"
+          style="margin-top: 4px"
+        >
+          <button
+            class="item-button"
+            fxFlex
+            fxLayout="row"
+            fxLayoutAlign="start center"
+            (click)="onViewCropAdvice(field.crop)"
+          >
             <div fxFlex="nogrow" class="item-image">
-              <img src="{{ field.crop.url }}" alt="{{ field.crop.cropName }}" class="square-image">
+              <img
+                src="{{ field.crop.url }}"
+                alt="{{ field.crop.cropName }}"
+                class="square-image"
+              />
             </div>
-            <div fxFlex fxLayout="column" fxLayoutAlign="center start" class="item-content">
-              <h2 fxFlex style="line-height: 1em"> {{field.fieldName}} </h2>
+            <div
+              fxFlex
+              fxLayout="column"
+              fxLayoutAlign="center start"
+              class="item-content"
+            >
+              <h2 fxFlex style="line-height: 1em">{{ field.fieldName }}</h2>
               <p fxFlex style="line-height: 1em">
-                <span> {{field.crop.cropName}} </span>
+                <span>{{ field.crop.cropName }}</span>
               </p>
             </div>
-            <div class="item-actions" fxFlex="none">
-              <button mat-mini-fab color="primary" (click)="onWaterClick(field)">
-                <mat-icon class="material-symbols-outlined">sprinkler</mat-icon>
-              </button>
-            </div>
+          </button>
+          <div class="item-actions" fxFlex="none">
+            <button mat-mini-fab color="primary" (click)="onWaterClick(field)">
+              <mat-icon class="material-symbols-outlined">sprinkler</mat-icon>
+            </button>
+          </div>
         </mat-list-item>
+
         <mat-divider></mat-divider>
       </ng-container>
     </mat-list>
@@ -63,20 +95,33 @@
     </ng-template>
     <mat-list>
       <ng-container *ngFor="let field of recentlyWateredFields">
-        <mat-list-item fxLayout="row"  fxFlexFill  fxLayoutAlign="space-between center" style="margin-top: 4px">
-            <div fxFlex="nogrow" class="item-image">
-              <img src="{{ field.crop.url }}" alt="{{ field.crop.cropName }}" class="square-image">
-            </div>
-            <div fxFlex fxLayout="column" fxLayoutAlign="center start" class="item-content">
-              <h2 fxFlex style="line-height: 1em"> {{field.fieldName}} </h2>
-              <p fxFlex style="line-height: 1em">
-                <span> {{ field.crop.cropName}} </span>
-              </p>
-            </div>
+        <mat-list-item
+          fxLayout="row"
+          fxFlexFill
+          fxLayoutAlign="space-between center"
+          style="margin-top: 4px"
+        >
+          <div fxFlex="nogrow" class="item-image">
+            <img
+              src="{{ field.crop.url }}"
+              alt="{{ field.crop.cropName }}"
+              class="square-image"
+            />
+          </div>
+          <div
+            fxFlex
+            fxLayout="column"
+            fxLayoutAlign="center start"
+            class="item-content"
+          >
+            <h2 fxFlex style="line-height: 1em">{{ field.fieldName }}</h2>
+            <p fxFlex style="line-height: 1em">
+              <span> {{ field.crop.cropName }} </span>
+            </p>
+          </div>
         </mat-list-item>
         <mat-divider></mat-divider>
       </ng-container>
     </mat-list>
   </mat-tab>
 </mat-tab-group>
-
