correct typo settings.component.html
moisture, not mosture

--- a/liquid-prep-app/src/app/components/settings/settings.component.html
+++ b/liquid-prep-app/src/app/components/settings/settings.component.html
@@ -50,7 +50,7 @@
    </mat-list-item>
     <mat-list-item>
       <a class="menu-list" mat-list-item href="#soil-moisture">
-        <p mat-line class="menu-list-body">Soil Mosture Reading</p>
+        <p mat-line class="menu-list-body">Soil Moisture Reading</p>
         <mat-icon class="menu-list-icon icon-in-menu" mat-list-icon>navigate_next</mat-icon>
       </a>
    </mat-list-item>
