--- a/liquid-prep-app/src/app/components/dashboard/home/home.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/home/home.component.html
@@ -1,9 +1,7 @@
 <div class="location-weather">
   <div class="location">
     <mat-card class="custom-card">
-      <mat-card-title class="farm mat-subheading"
-        >Frog Hill Form</mat-card-title
-      >
+      <mat-card-title class="farm mat-subheading">Frog Hill Form</mat-card-title>
       <mat-card-content class="city-info">
         <mat-icon class="material-icons-outlined">location_on</mat-icon>
         <span>{{ location }}</span>
@@ -18,57 +16,29 @@
     <mat-card class="custom-card">
       <mat-card-title>{{ temperature }}&deg;C</mat-card-title>
       <mat-card-content>
-        <span style="margin-right: 4px"
-          >{{ loading ? "" : precipChance }}%</span
-        >
+        <span style="margin-right: 4px">{{ loading ? "" : precipChance }}%</span>
         <span>{{ loading ? "" : precipType }}</span>
       </mat-card-content>
     </mat-card>
   </div>
 </div>
 
-<mat-tab-group
-  #tabGroup
-  mat-stretch-tabs
-  (selectedTabChange)="onTabChange($event)"
->
+<mat-tab-group #tabGroup mat-stretch-tabs (selectedTabChange)="onTabChange($event)">
   <mat-tab #tab1>
     <ng-template mat-tab-label>
       <div class="vertical-align-center">
-        <mat-icon class="mat-primary material-symbols-outlined"
-          >sprinkler</mat-icon
-        >
+        <mat-icon class="mat-primary material-symbols-outlined">sprinkler</mat-icon>
         <span>Needs Watering</span>
       </div>
     </ng-template>
     <mat-list>
       <ng-container *ngFor="let field of needsWateringFields">
-        <mat-list-item
-          fxLayout="row"
-          fxFlexFill
-          fxLayoutAlign="space-between center"
-          style="margin-top: 4px"
-        >
-          <button
-            class="item-button"
-            fxFlex
-            fxLayout="row"
-            fxLayoutAlign="start center"
-            (click)="onViewCropAdvice(field.crop)"
-          >
+        <mat-list-item fxLayout="row" fxFlexFill fxLayoutAlign="space-between center" style="margin-top: 4px">
+          <button class="item-button" fxFlex fxLayout="row" fxLayoutAlign="start center" (click)="onViewCropAdvice(field.crop)">
             <div fxFlex="nogrow" class="item-image">
-              <img
-                src="{{ field.crop.url }}"
-                alt="{{ field.crop.cropName }}"
-                class="square-image"
-              />
+              <img src="{{ field.crop.url }}" alt="{{ field.crop.cropName }}" class="square-image" />
             </div>
-            <div
-              fxFlex
-              fxLayout="column"
-              fxLayoutAlign="center start"
-              class="item-content"
-            >
+            <div fxFlex fxLayout="column" fxLayoutAlign="center start" class="item-content">
               <h2 fxFlex style="line-height: 1em">{{ field.fieldName }}</h2>
               <p fxFlex style="line-height: 1em">
                 <span>{{ field.crop.cropName }}</span>
@@ -95,25 +65,11 @@
     </ng-template>
     <mat-list>
       <ng-container *ngFor="let field of recentlyWateredFields">
-        <mat-list-item
-          fxLayout="row"
-          fxFlexFill
-          fxLayoutAlign="space-between center"
-          style="margin-top: 4px"
-        >
+        <mat-list-item fxLayout="row" fxFlexFill fxLayoutAlign="space-between center" style="margin-top: 4px">
           <div fxFlex="nogrow" class="item-image">
-            <img
-              src="{{ field.crop.url }}"
-              alt="{{ field.crop.cropName }}"
-              class="square-image"
-            />
+            <img src="{{ field.crop.url }}" alt="{{ field.crop.cropName }}" class="square-image" />
           </div>
-          <div
-            fxFlex
-            fxLayout="column"
-            fxLayoutAlign="center start"
-            class="item-content"
-          >
+          <div fxFlex fxLayout="column" fxLayoutAlign="center start" class="item-content">
             <h2 fxFlex style="line-height: 1em">{{ field.fieldName }}</h2>
             <p fxFlex style="line-height: 1em">
               <span> {{ field.crop.cropName }} </span>
